--- a/templates/fileupload.html
+++ b/templates/fileupload.html
@@ -12,7 +12,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Daviz</title>
   </head>
-
+<style>
+  .card-body {
+  margin-left: 25%;
+  margin-top: 10%;
+  margin-right: 10%;
+  width: 10%;
+}
+</style>
   <body>
     <nav class="navbar" style="background-color: #c3e7e7">
       <div class="container-fluid">
