--- a/templates/chart.html
+++ b/templates/chart.html
@@ -12,7 +12,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <title>Document</title>
+    <title>Chart</title>
   </head>
   <body>
     <nav class="navbar" style="background-color: #dbdede">
