--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
         <a href="#about">About Us</a>
         <a href="#explore">Explore</a>
         <a href="#contact">Contact</a>
-
+        <a href="/chat">Chat</a>
         {% with messages = get_flashed_messages() %} {% if messages %}
         <script>
           alert("{{ messages[0] }}");
