--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style rel="stylesheet" src="/static/style.css"></style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Daviz Chatbot</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar" style="background-color: #dbdede">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">
-            <img src="/static/resources/Daviz-1.png" alt="Logo" width="100" height="24"
-              class="d-inline-block align-text-bottom" ></a>
-        </div>
-      </nav><br>
-    <iframe src='https://webchat.botframework.com/embed/davizaidaviz-bot?s=fYRTuHOJbr8.U_SvldEhEE10O0-2qfcPTKHz02ZmArSBHmJCVXNS7p0'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
-</body>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img
+            src="/static/resources/Daviz-1.png"
+            alt="Logo"
+            width="100"
+            height="24"
+            class="d-inline-block align-text-bottom"
+        /></a>
+      </div>
+    </nav>
+    <br />
+    <iframe
+      src="https://webchat.botframework.com/embed/davizai-bot?s=0RtB3lbcd5U.NrhHm_BB3QkK3Hk18tMmOhP4ej_OqmIMoXgchlhAd6c"
+      style="min-width: 400px; width: 100%; min-height: 500px"
+    ></iframe>
+  </body>
 </html>
