--- a/templates/fileupload.html
+++ b/templates/fileupload.html
@@ -11,10 +11,14 @@
   </head>
 <style>
   .card-body {
-  margin-left: 25%;
-  margin-top: 10%;
+  margin-left: 30%;
+  margin-top: 12%;
   margin-right: 10%;
   width: 10%;
+}
+body{
+  background-image: url("/static/resources/chart-bg-1.jpg");
+  background-repeat: no-repeat;
 }
 </style>
   <body>
