--- a/templates/chart.html
+++ b/templates/chart.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/static/resources/favicon.png" type="image/x-icon" />
     <style rel="stylesheet" src="/static/style.css"></style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -14,6 +15,13 @@
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <title>Chart</title>
   </head>
+  <style>
+    body{
+      background-image: url("/static/resources/bg.jpg");
+      background-repeat: no-repeat;
+      /* background-size: cover; */
+    }
+  </style>
   <body>
     <nav class="navbar" style="background-color: #dbdede">
       <div class="container-fluid">
@@ -26,8 +34,8 @@
         </li>
         {% endif %}
       </div>
-    </nav>
-    <div id="target_div">
+    </nav><br>
+    <div class="card card-body" id="target_div">
      <script>
         {{data|safe}}
       </script>
