--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,14 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/static/resources/favicon.png" type="image/x-icon" />
     <style rel="stylesheet" src="/static/style.css"></style>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Daviz Chatbot</title>
+    <title>Daviz bot</title>
   </head>
+  <style>
+    body{
+      background-image: url("/static/resources/bg.jpg");
+      background-size: auto;
+      background-repeat: no-repeat;
+    }
+    .card{
+      margin-top: 5%;
+      margin-left: 10%;
+      margin-right: 10%;
+    }
+    .card {
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+      border-radius: 5px;
+      padding: 20px;
+      background-color: #f8f9fa;
+    }
+
+    .card:hover {
+      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+
+    iframe {
+      border: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+  </style>
   <body>
     <nav class="navbar" style="background-color: #dbdede">
       <div class="container-fluid">
@@ -24,10 +53,11 @@
         /></a>
       </div>
     </nav>
-    <br />
+    <div class="card card-body">
     <iframe
       src="https://webchat.botframework.com/embed/davizai-bot?s=0RtB3lbcd5U.NrhHm_BB3QkK3Hk18tMmOhP4ej_OqmIMoXgchlhAd6c"
       style="min-width: 400px; width: 100%; min-height: 500px"
     ></iframe>
+  </div>
   </body>
 </html>
