--- a/templates/fileupload.html
+++ b/templates/fileupload.html
@@ -17,9 +17,10 @@
   width: 10%;
 }
 body{
-  background-image: url("/static/resources/chart-bg-1.jpg");
-  /* background-image: url("/static/resources/bg-2.jpg"); */
+  background-image: url("/static/resources/image.png");
   background-repeat: no-repeat;
+  background-size: cover;
+  /* background-position: calc(100-50vw)  */
 }
 .alert{
   width:max-content;
@@ -28,7 +29,7 @@ body{
 </style>
   <body>
     <nav class="navbar" style="background-color: #c3e7e7">
-      <div class="container-fluid">
+      <div class="container-fluid flex">
         <a class="navbar-brand" href="/">
           <img
             src="/static/resources/Daviz-1.png"
@@ -43,9 +44,12 @@ body{
           <img src="{{profile}}" width="30" height="30" class="d-inline-block align-top rounded-circle" alt="img">
            {{user}}
         </li>
+        <!-- <a href="/chat">ChatBot</a> -->
+        <!-- <a class="btn btn-color flex" href="/chat" role="button">ChatBot</a> -->
+
         <a class="btn btn-color" href="/logout" role="button">Logout</a>
         {% else %}
-
+        <!-- <a href="/chat">ChatBot</a> -->
         <a class="btn btn-color" href="/login" role="button">Google Signup</a>
         {% endif %}
       </div>
