--- a/templates/input.html
+++ b/templates/input.html
@@ -14,10 +14,12 @@
 </head>
 <style>
   body{
-    background-image: url("/static/resources/charts-bg.jpg");
+    /* background-image: url("/static/resources/input.jpg"); */
+    /* background-image: url("/static/resources/input1.jpg"); */
+    background-image: url("/static/resources/image.png");
     background-repeat: no-repeat;
+    background-size: cover;
 }
-
   .card{
     width:20%;
     margin-left: 40%;
@@ -33,11 +35,11 @@
   }
 </style>
 <body>
-  <nav class="navbar" style="background-color: #dbdede">
+  <nav class="navbar" style="background-color: #c3e7e7">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="/static/resources/Daviz-1.png" alt="Logo" width="100" height="24"
-          class="d-inline-block align-text-bottom" /></a>+
+          class="d-inline-block align-text-bottom" /></a>
     </div>
   </nav>
   <form action="/visualize" method="POST">
