--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
     }
   </style>
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #dbdede">
+    <nav class="navbar navbar-expand-lg" style="background-color: #c3e7e7">
       <!-- <div class="container-fluid"> -->
       <a class="navbar-brand" href="/">
         <img
