--- a/templates/chat.html
+++ b/templates/chat.html
@@ -55,7 +55,7 @@
     </nav>
     <div class="card card-body">
     <iframe
-      src="https://webchat.botframework.com/embed/davizai-bot?s=0RtB3lbcd5U.NrhHm_BB3QkK3Hk18tMmOhP4ej_OqmIMoXgchlhAd6c"
+      src="https://webchat.botframework.com/embed/davizai-bot?s=eHS1HWKpU0s.DBfjsKXR552K-_TYb58rGFKNd3arrU2Z3MkULRCfTDo"
       style="min-width: 400px; width: 100%; min-height: 500px"
     ></iframe>
   </div>
