--- a/templates/chat.html
+++ b/templates/chat.html
@@ -54,6 +54,8 @@
       </div>
     </nav>
     <div class="card card-body">
+      <iframe src='https://webchat.botframework.com/embed/daviz-bot?s=eHS1HWKpU0s.DBfjsKXR552K-_TYb58rGFKNd3arrU2Z3MkULRCfTDo'
+        style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
     <iframe
       src="https://webchat.botframework.com/embed/davizai-bot?s=eHS1HWKpU0s.DBfjsKXR552K-_TYb58rGFKNd3arrU2Z3MkULRCfTDo"
       style="min-width: 400px; width: 100%; min-height: 500px"
