--- a/templates/chart.html
+++ b/templates/chart.html
@@ -1,1 +1,45 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/static/resources/favicon.png" type="image/x-icon" />
+    <style rel="stylesheet" src="/static/style.css"></style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/series-label.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <title>Chart</title>
+  </head>
+  <style>
+    body{
+      background-image: url("/static/resources/bg.jpg");
+      background-repeat: no-repeat;
+      /* background-size: cover; */
+    }
+  </style>
+  <body>
+    <nav class="navbar" style="background-color: #dbdede">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img src="/static/resources/Daviz-1.png" alt="Logo" width="100" height="24"
+            class="d-inline-block align-text-bottom" /></a>
+        <li class="nav">
+          {% if user %}
+          <pre>{{user}}</pre>
+        </li>
+        {% endif %}
+      </div>
+    </nav><br>
+    <div class="card card-body" id="target_div">
+     <script>
+        {{data|safe}}
+      </script>
+     
+    </div>
+  </body>
+</html>
